<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background2"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">
        <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/failed_intro1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textDirection="rtl"
                    android:id="@+id/textView2"
                    android:textAlignment="center"
                    android:textSize="50sp"
                    android:textStyle="normal|bold"
                    android:textColor="#FFFFFF"
                    android:shadowColor="@color/black"
                    android:shadowDx="12"
                    android:shadowDy="12"
                    android:shadowRadius="8"
                    android:fontFamily="@font/secular_one"/>
            <TextView
                    android:text="@string/failed_intro2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="normal|bold"
                    android:textColor="#FFFFFF"
                    android:shadowColor="@color/black"
                    android:shadowDx="12"
                    android:shadowDy="12"
                    android:shadowRadius="8"
                    android:fontFamily="@font/secular_one"/>
            <TextView
                    android:text="@string/failed_intro3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="normal|bold"
                    android:textColor="#FFFFFF"
                    android:shadowColor="@color/black"
                    android:shadowDx="12"
                    android:shadowDy="12"
                    android:shadowRadius="8"
                    android:fontFamily="@font/secular_one"/>
            <TextView
                    android:text="@string/failed_intro4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="normal|bold"
                    android:textColor="#FFFFFF"
                    android:shadowColor="@color/black"
                    android:shadowDx="12"
                    android:shadowDy="12"
                    android:shadowRadius="8"
                    android:fontFamily="@font/secular_one"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>
            <ImageView
                    android:layout_width="500dp"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/failed"
                    android:layout_gravity="center"
                    android:id="@+id/imageView"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>