<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background2"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/linearLayout2" tools:ignore="UselessParent">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp"/>
                <TextView
                        android:text="@string/intro1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textDirection="rtl"
                        android:id="@+id/textView2"
                        android:textAlignment="center"
                        android:textSize="50sp"
                        android:textStyle="normal|bold"
                        android:textColor="#FFFFFF"
                        android:shadowColor="@color/black"
                        android:shadowDx="12"
                        android:shadowDy="12"
                        android:shadowRadius="8"
                        android:fontFamily="@font/secular_one"/>
                <TextView
                        android:text="@string/intro2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView3"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="normal|bold"
                        android:textColor="#FFFFFF"
                        android:shadowColor="@color/black"
                        android:shadowDx="12"
                        android:shadowDy="12"
                        android:shadowRadius="8"
                        android:fontFamily="@font/secular_one"/>
                <TextView
                        android:text="@string/intro3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView4"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="normal|bold"
                        android:textColor="#FFFFFF"
                        android:shadowColor="@color/black"
                        android:shadowDx="12"
                        android:shadowDy="12"
                        android:shadowRadius="8"
                        android:fontFamily="@font/secular_one"/>
                <TextView
                        android:text="@string/intro4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView5"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="normal|bold"
                        android:textColor="#FFFFFF"
                        android:shadowColor="@color/black"
                        android:shadowDx="12"
                        android:shadowDy="12"
                        android:shadowRadius="8"
                        android:fontFamily="@font/secular_one"/>
                <Space
                        android:layout_width="match_parent"
                        android:layout_height="180dp"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="1dp"
                    android:id="@+id/linearLayout"
            >
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="396dp"
                            android:gravity="center"
                            android:textDirection="rtl"
                            android:layout_height="114dp">
                        <EditText
                                android:layout_width="364dp"
                                android:drawableStart="@drawable/ic_user"
                                android:drawablePadding="12dp"
                                android:layout_height="wrap_content"
                                android:inputType="textPersonName"
                                android:ems="10"
                                android:id="@+id/fullName"
                                android:hint="שם מלא"
                                android:textSize="20sp"
                                android:importantForAutofill="no"
                                android:layoutDirection="rtl"
                                android:minHeight="48dp"
                                android:shadowColor="@color/black"
                                android:shadowDx="12"
                                android:shadowDy="12"
                                android:shadowRadius="8"
                                android:textColor="@color/white"
                                android:textColorHint="@color/white"
                                android:textDirection="rtl"
                                android:typeface="sans"

                                tools:ignore="TextContrastCheck" android:fontFamily="@font/secular_one"
                                android:textColorHighlight="#000000" android:textColorLink="#000000"/>
                        <EditText
                                android:id="@+id/phoneNumber"
                                android:drawableStart="@drawable/ic_phone_call"
                                android:drawablePadding="12dp"
                                android:textSize="20sp"
                                android:gravity="right"
                                android:layout_width="364dp"
                                android:layout_height="wrap_content"
                                android:inputType="phone"
                                android:ems="10"
                                android:hint="מספר טלפון"
                                android:importantForAutofill="no"
                                android:layoutDirection="rtl"
                                android:minHeight="48dp"
                                android:shadowColor="@color/black"
                                android:shadowDx="12"
                                android:shadowDy="12"
                                android:shadowRadius="8"
                                android:textColor="@color/white"
                                android:textColorHint="@color/white"
                                android:textDirection="rtl"
                                android:typeface="sans"
                                tools:ignore="TextContrastCheck" android:fontFamily="@font/secular_one"
                                android:textColorHighlight="#000000" android:textColorLink="#000000"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/radioArea"
                                android:shadowColor="@color/black"
                                android:shadowDx="12"
                                android:shadowDy="12"
                                android:shadowRadius="8"
                                android:text="@string/RadioText"
                                android:textColor="@color/white"
                                android:textSize="22sp"
                                android:typeface="sans"
                                android:textAlignment="center" android:fontFamily="@font/secular_one"
                                android:textStyle="bold"/>
                        <RadioGroup
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layoutDirection="rtl"
                                android:gravity="center"
                                android:id="@+id/radioAreaGroup"
                                android:orientation="horizontal">
                            <RadioButton
                                    android:id="@+id/radioAreaAshkelon"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:buttonTint="#FFFFFF"
                                    android:shadowColor="@color/black"
                                    android:shadowDx="12"
                                    android:shadowDy="12"
                                    android:shadowRadius="8"
                                    android:text="אשקלון והסביבה"
                                    android:textColor="@color/white"
                                    android:textSize="20sp"
                                    android:typeface="sans" android:fontFamily="@font/secular_one"/>
                            <RadioButton
                                    android:id="@+id/radioAreaAshdod"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:buttonTint="#FFFFFF"
                                    android:shadowColor="@color/black"
                                    android:shadowDx="12"
                                    android:shadowDy="12"
                                    android:shadowRadius="8"
                                    android:text="אשדוד"
                                    android:textColor="@color/white"
                                    android:textSize="20sp"
                                    android:typeface="sans" android:fontFamily="@font/secular_one"/>
                            <RadioButton
                                    android:id="@+id/radioAreaSderot"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:buttonTint="#FFFFFF"
                                    android:shadowColor="@color/black"
                                    android:shadowDx="12"
                                    android:shadowDy="12"
                                    android:shadowRadius="8"
                                    android:text="שדרות ונתיבות"
                                    android:textColor="@color/white"
                                    android:textSize="20sp"
                                    android:typeface="sans" android:fontFamily="@font/secular_one"/>
                            <RadioButton
                                    android:id="@+id/radioAreaRest"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:buttonTint="#FFFFFF"
                                    android:shadowColor="@color/black"
                                    android:shadowDx="12"
                                    android:shadowDy="12"
                                    android:shadowRadius="8"
                                    android:text="שאר הארץ"
                                    android:textColor="@color/white"
                                    android:textSize="20sp"
                                    android:typeface="sans" android:fontFamily="@font/secular_one"/>
                        </RadioGroup>
                        <Button
                                android:id="@+id/registerButton"
                                style="@style/Widget.AppCompat.Button"
                                android:text="@string/buttonText"
                                android:textAllCaps="true"
                                android:textSize="24sp"
                                android:layout_width="wrap_content"
                                android:background="@android:color/white"
                                android:textColor="@color/white"
                                android:layout_gravity="center"
                                android:layout_height="wrap_content" android:fontFamily="@font/secular_one"
                                tools:ignore="TextContrastCheck"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>